<resources>
    <string name="app_name">rma18Tarakčija16925</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ucitajSliku">Učitaj sliku</string>
    <string name="ponisti">Poništi</string>
    <string name="upisiKnjigu">Upiši knjigu</string>
    <string name="imeAutora">Ime autora</string>
    <string name="nazivKnjige">Naziv knjige</string>
    <string name="povratak">Povratak</string>
    <string name="dodajKategoriju">Dodaj kategoriju</string>
    <string name="dodajKnjigu">Dodaj knjigu</string>
    <string name="kategorije">Kategorije</string>
    <string name="autori">Autori</string>
    <string name="pretraga">Pretraga</string>
    <string name="dodajOnline">Dodaj knjigu online</string>
    <string name="dodaj">Dodaj</string>
    <string name="nijePronadjeno">Nije pronađena nijedna knjiga.</string>
    <string name="nedovoljnoPodataka">Niste unijeli sve potrebne podatke.</string>
    <string name="dodanaNovaKnjiga">Knjiga dodana.</string>
    <string name="problemSlika">Problem sa slikom.</string>
    <string name="pronadjeno">pronađeno.</string>
    <string name="knjiga">knjiga</string>
    <string name="kategorijaPostoji">Kategorija već postoji.</string>
    <string name="kategorijaDodana">Dodana nova kategorija.</string>
    <string name="webServisPokrenut">Web servis pokrenut.</string>
    <string name="webServisGreska">Desila se greška.</string>
    <string name="kategorijePrazne">Ne postoji nijedna kategorija.</string>
    <string name="unesiKategoriju">Unesi kategoriju</string>
    <string name="pretrazi">knjiga, autor, korisnik</string>
    <string name="datumObjavljivanja">Datum objavljivanja: </string>
    <string name="brojStranica">Broj stranica: </string>
    <string name="opis">Opis: </string>
    <string name="prosiri">PROŠIRI</string>
    <string name="preporuci">Preporuči</string>
    <string name="posalji">Pošalji</string>
    <string name="praznaKategorija">Ne možete dodati praznu kategoriju.</string>
    <string name="knjigaPostoji">Knjiga već postoji.</string>
</resources>
