<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="87dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints"
        android:scrollbars="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/naslovnaStr"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:srcCompat="@mipmap/ic_launcher"
                tools:layout_editor_absoluteX="156dp"
                tools:layout_editor_absoluteY="16dp" />

            <EditText
                android:id="@+id/imeAutora"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:ems="12"
                android:hint="@string/imeAutora"
                android:inputType="text"
                android:textCursorDrawable="@drawable/cursor"
                android:textColor="@color/colorBlue2"
                android:textColorHint="@color/colorDarkGray"
                android:background="@drawable/round_button_outline"
                android:paddingLeft="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="14dp" />

            <EditText
                android:id="@+id/nazivKnjige"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="12"
                android:hint="@string/nazivKnjige"
                android:inputType="text"
                android:textCursorDrawable="@drawable/cursor"
                android:textColor="@color/colorBlue2"
                android:textColorHint="@color/colorDarkGray"
                android:background="@drawable/round_button_outline"
                android:paddingLeft="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="14dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/dNadjiSliku"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="20dp"
                    android:text="@string/ucitajSliku"
                    android:background="@drawable/invisible_button"
                    android:drawableTop="@drawable/image_icon"
                    android:drawableTint="@color/colorBlue2"
                    android:textColor="@color/colorBlue2"
                    android:textSize="12dp"
                    />

                <Spinner
                    android:id="@+id/sKategorijaKnjige"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:popupBackground="@color/colorWhite"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            tools:layout_editor_absoluteX="10dp"
            tools:layout_editor_absoluteY="183dp">

            <Button
                android:id="@+id/dPonisti"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:text="@string/ponisti"
                android:drawableTop="@drawable/cancel_icon"
                android:background="@drawable/invisible_button"
                android:drawableTint="@color/colorDarkRed"
                android:textColor="@color/colorDarkRed"
                android:textSize="12dp"/>

            <Button
                android:id="@+id/dUpisiKnjigu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:text="@string/dodajKnjigu"
                android:background="@drawable/invisible_button"
                android:drawableTint="@color/colorBlue2"
                android:drawableTop="@drawable/add_icon"
                android:textColor="@color/colorBlue2"
                android:textSize="12dp"/>
        </LinearLayout>

    </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>