<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentPreporuci"
    android:clickable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="blocksDescendants"
            android:orientation="horizontal"
            android:background="@color/colorWhite">

            <ImageView
                android:id="@+id/naslovna"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorWhite"
                android:descendantFocusability="blocksDescendants"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/naziv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Naziv knjige"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:id="@+id/autor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Ime i prezime autora" />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/datumObjavljivanja"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/datumObjavljivanja"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/brojStranica"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/brojStranica"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/opis"
                android:maxLines="5"
                android:scrollbars="vertical"/>

            <TextView
                android:id="@+id/opis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="5"
                android:scrollbars="vertical"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/sKontakti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"></Spinner>

            <Button
                android:id="@+id/dPosalji"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:background="@color/colorBlue"
                android:text="@string/posalji"
                android:textColor="@color/colorWhite" />

        </LinearLayout>



    </LinearLayout>

</FrameLayout>